--- a/embedded/admin/templates/admin_index.tmpl
+++ b/embedded/admin/templates/admin_index.tmpl
@@ -78,27 +78,27 @@
 
         <div class="relative overflow-x-auto rounded-lg">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
-                <tr>
-                    <th scope="col" class="px-6 py-3">Title</th>
-                    <th scope="col" class="px-6 py-3">Published</th>
-                    <th scope="col" class="px-6 py-3">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{range .recentPosts}}
-                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                    <td class="px-6 py-4">{{.Title}}</td>
-                    <td x-dynamic-date="{{.PublishedAtUTC}}" x-dynamic-date-timezone="{{.PublishedAtTimeZoneOffset}}" class="px-6 py-4">
-                        {{.PublishedAt.Format "2006-01-02 15:04"}}
-                    </td>
-                    <td class="px-6 py-4">
-                        <a href="/admin/posts/{{.ID}}/edit" class="btn btn-edit">Edit</a>
-                    </td>
-                </tr>
-                {{end}}
-            </tbody>
-        </table>
+                <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">Title</th>
+                        <th scope="col" class="px-6 py-3">Published</th>
+                        <th scope="col" class="px-6 py-3">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{range .recentPosts}}
+                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                        <td class="px-6 py-4">{{.Title}}</td>
+                        <td x-dynamic-date="{{.PublishedAtUTC}}" x-dynamic-date-timezone="{{.PublishedAtTimeZoneOffset}}" class="px-6 py-4">
+                            {{.PublishedAt.Format "2006-01-02 15:04"}}
+                        </td>
+                        <td class="px-6 py-4">
+                            <a href="/admin/posts/{{.ID}}/edit" class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white px-4 py-2 rounded">Edit</a>
+                        </td>
+                    </tr>
+                    {{end}}
+                </tbody>
+            </table>
         {{else}}
         <div>
             <p class="text-gray-500 dark:text-gray-400 text-center">
