--- a/embedded/admin/templates/admin_pages.tmpl
+++ b/embedded/admin/templates/admin_pages.tmpl
@@ -35,7 +35,7 @@
                     <td class="actions">
                         <a href="/admin/pages/{{.ID}}/edit" class="btn-primary">Edit</a>
                         <a href="/admin/pages/{{.ID}}/delete" class="btn-danger">Delete</a>
-                        <a href="/pages/{{.Slug}}" class="btn btn-secondary" target="_blank">View</a>
+                        <a href="/pages/{{.Slug}}" class="btn-secondary" target="_blank">View</a>
                     </td>
                 </tr>
                 {{end}}
