--- a/embedded/admin/templates/admin_confirm_delete_user.tmpl
+++ b/embedded/admin/templates/admin_confirm_delete_user.tmpl
@@ -1,48 +1,21 @@
 {{ template "admin_header" . }}
-<div class="admin-page">
-    <div class="page-header">
-        <h1>Delete User</h1>
-        <a href="/admin/users" class="btn">← Back to Users</a>
+<h1 class="title">Delete User</h1>
+<div class="confirm-delete">
+    <h3>Are you sure you want to delete the user "{{.user.FirstName}} {{.user.LastName}}"?</h3>
+    {{if .hasContent}}
+    <div>
+        <span>This user has authored posts. If you delete this user:</span>
+    <ul class="my-2 ml-16 list-disc text-left">
+            <li>Their posts will be preserved</li>
+            <li>Their name will still appear as the author</li>
+            <li>But they will no longer be able to log in or edit content</li>
+        </ul>
     </div>
-
-    {{ if .error }}
-        <div class="error-message">{{ .error }}</div>
-    {{ end }}
-
-    <div class="confirm-delete">
-        <p>Are you sure you want to delete the user "{{.user.FirstName}} {{.user.LastName}}"?</p>
-        {{if .hasContent}}
-        <div class="alert alert-warning">
-            <p>This user has authored posts. If you delete this user:</p>
-            <ul>
-                <li>Their posts will be preserved</li>
-                <li>Their name will still appear as the author</li>
-                <li>But they will no longer be able to log in or edit content</li>
-            </ul>
-        </div>
-        {{end}}
-        <p>This action cannot be undone.</p>
-        <div class="actions">
-            <button onclick="deleteUser({{.user.ID}})" class="btn btn-delete">Delete</button>
-            <a href="/admin/users" class="btn">Cancel</a>
-        </div>
+    {{end}}
+    <p class="my-2">This action cannot be undone.</p>
+    <div class="actions">
+        <button onclick="deleteUser({{.user.ID}})" class="btn-danger">Delete</button>
+        <a href="/admin/users" class="btn-secondary">Cancel</a>
     </div>
 </div>
-
-<script>
-function deleteUser(id) {
-    fetch(`/admin/users/${id}`, {
-        method: 'DELETE',
-        headers: {
-            'Content-Type': 'application/json'
-        }
-    }).then(response => {
-        if (response.ok) {
-            window.location.href = '/admin/users';
-        } else {
-            alert('Failed to delete user');
-        }
-    });
-}
-</script>
 {{ template "admin_footer" . }}
