--- a/embedded/admin/templates/admin_edit_tag.tmpl
+++ b/embedded/admin/templates/admin_edit_tag.tmpl
@@ -1,9 +1,9 @@
 {{ template "admin_header" . }}
 
-<div class="admin-page">
-    <div class="page-header">
-        <h1>Edit Tag</h1>
-        <a href="/admin/tags" class="btn">← Back to Tags</a>
+<div class="p-4">
+    <div class="mb-8">
+        <h1 class="title">Edit Tag</h1>
+        <a href="/admin/tags" class="btn-secondary">← Back to Tags</a>
     </div>
 
     {{ if .error }}
@@ -20,7 +20,7 @@
             <input type="text" id="slug" name="slug" class="form-control" value="{{.tag.Slug}}" required>
         </div>
         <div class="form-actions">
-            <button type="submit" class="btn-submit">Update Tag</button> &nbsp;
+            <button type="submit" class="btn-primary">Update Tag</button> &nbsp;
         </div>
     </form>
 </div>
