--- a/embedded/admin/templates/admin_index.tmpl
+++ b/embedded/admin/templates/admin_index.tmpl
@@ -1,6 +1,6 @@
 {{ template "admin_header" . }}
 <div class="min-h-96">
-    <h1 class="text-4xl text-bold mb-4 text-gray-900 dark:text-gray-400">Dashboard</h1>
+    <h1 class="title">Dashboard</h1>
 
     <div class="grid grid-cols-1 gap-8 p-4 lg:grid-cols-2 xl:grid-cols-4">
         <!-- Posts card -->
@@ -77,39 +77,37 @@
         {{if .recentPosts}}
 
         <div class="relative overflow-x-auto rounded-lg">
-            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-                <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
+            <table class="table">
+                <thead>
                     <tr>
-                        <th scope="col" class="px-6 py-3">Title</th>
-                        <th scope="col" class="px-6 py-3">Published</th>
-                        <th scope="col" class="px-6 py-3">Actions</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Published</th>
+                        <th scope="col">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{range .recentPosts}}
-                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                        <td class="px-6 py-4">{{.Title}}</td>
-                        <td x-dynamic-date="{{.PublishedAtUTC}}" x-dynamic-date-timezone="{{.PublishedAtTimeZoneOffset}}" class="px-6 py-4">
+                    <tr>
+                        <td>{{.Title}}</td>
+                        <td x-dynamic-date="{{.PublishedAtUTC}}" x-dynamic-date-timezone="{{.PublishedAtTimeZoneOffset}}">
                             {{.PublishedAt.Format "2006-01-02 15:04"}}
                         </td>
-                        <td class="px-6 py-4">
-                            <a href="/admin/posts/{{.ID}}/edit" class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white px-4 py-2 rounded">Edit</a>
+                        <td>
+                            <a href="/admin/posts/{{.ID}}/edit" class="btn-primary">Edit</a>
                         </td>
                     </tr>
                     {{end}}
                 </tbody>
             </table>
         {{else}}
-        <div>
-            <p class="text-gray-500 dark:text-gray-400 text-center">
-                You haven't created any posts yet. Start your blogging journey by creating your first post!
-                <a href="/admin/posts/create" class="inline-flex items-center font-medium text-blue-600 dark:text-blue-500 hover:underline">
-                    Create Your First Post
-                    <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>
-                </a>
-            </p>
+        <div class="empty-state">
+            <p>No posts found. Start writing your first blog post!</p>
+            <a href="/admin/posts/create" class="link-primary">
+                Create Your First Post
+                <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
         </div>
         {{end}}
     </div>
