--- a/embedded/admin/templates/admin_posts.tmpl
+++ b/embedded/admin/templates/admin_posts.tmpl
@@ -1,65 +1,64 @@
 {{ template "admin_header" . }}
-<div>
-    <h1 class="title">Posts</h1>
+<h1 class="title">Posts</h1>
 
-    {{ if .posts }}
-    <div class="mb-8 cursor-pointer">
-        <a href="/admin/posts/create" class="btn-primary">
-            Create New Post
-            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+{{ if .posts }}
+<div class="mb-8 cursor-pointer">
+    <a href="/admin/posts/create" class="btn-primary">
+        Create New Post
+        <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+        </svg>
+    </a>
+</div>
+{{ end }}
+
+<div class="table-container">
+    {{if .posts}}
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Published</th>
+                <th scope="col">Visible</th>
+                <th scope="col">Tags</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{range .posts}}
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <td>{{.Title}}</td>
+                <td>{{if .Author}}{{.Author.FirstName}} {{.Author.LastName}}{{else}}<em>Deleted User</em>{{end}}</td>
+                <td x-dynamic-date="{{.PublishedAtUTC}}" x-dynamic-date-timezone="{{.PublishedAtTimeZoneOffset}}">
+                    {{.PublishedAt.Format "2006-01-02 15:04"}}
+                </td>
+                <td>{{if .Visible}}Yes{{else}}No{{end}}</td>
+                <td>
+                    {{range .Tags}}
+                        <span class="tag">{{.Name}}</span>
+                    {{end}}
+                </td>
+                <td>
+                    <a href="/admin/posts/{{.ID}}/edit" class="btn-primary">Edit</a>
+                    <a href="/admin/posts/{{.ID}}/delete" class="btn-danger">Delete</a>
+                    <a href="/posts/{{.Slug}}" target="_blank" class="btn-secondary">View</a>
+                </td>
+            </tr>
+            {{end}}
+        </tbody>
+    </table>
+    {{else}}
+    <div class="empty-state">
+        <p>No posts found. Start writing your first blog post!</p>
+        <a href="/admin/posts/create" class="link-primary">
+            Create Your First Post
+            <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
             </svg>
         </a>
     </div>
-    {{ end }}
-
-    <div class="table-container">
-        {{if .posts}}
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Author</th>
-                    <th scope="col">Published</th>
-                    <th scope="col">Visible</th>
-                    <th scope="col">Tags</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{range .posts}}
-                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                    <td>{{.Title}}</td>
-                    <td>{{if .Author}}{{.Author.FirstName}} {{.Author.LastName}}{{else}}<em>Deleted User</em>{{end}}</td>
-                    <td x-dynamic-date="{{.PublishedAtUTC}}" x-dynamic-date-timezone="{{.PublishedAtTimeZoneOffset}}">
-                        {{.PublishedAt.Format "2006-01-02 15:04"}}
-                    </td>
-                    <td>{{if .Visible}}Yes{{else}}No{{end}}</td>
-                    <td>
-                        {{range .Tags}}
-                            <span class="tag">{{.Name}}</span>
-                        {{end}}
-                    </td>
-                    <td>
-                        <a href="/admin/posts/{{.ID}}/edit" class="btn-primary">Edit</a>
-                        <a href="/admin/posts/{{.ID}}/delete" class="btn-danger">Delete</a>
-                        <a href="/posts/{{.Slug}}" class="btn-secondary">View</a>
-                    </td>
-                </tr>
-                {{end}}
-            </tbody>
-        </table>
-        {{else}}
-        <div class="empty-state">
-            <p>No posts found. Start writing your first blog post!</p>
-            <a href="/admin/posts/create" class="link-primary">
-                Create Your First Post
-                <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                </svg>
-            </a>
-        </div>
-        {{end}}
-    </div>
+    {{end}}
 </div>
+
 {{ template "admin_footer" . }}
