--- a/embedded/admin/templates/admin_settings.tmpl
+++ b/embedded/admin/templates/admin_settings.tmpl
@@ -41,7 +41,7 @@
                 <p class="form-help">
                     Hint: Size should be at least 300x300, preferrably square. Image format should be JPEG or PNG
                 </p>
-                <button type="button" class="btn btn-secondary" onclick="openLogoMediaSelector()">Select Logo</button>
+                <button type="button" class="btn-secondary" onclick="openLogoMediaSelector()">Select Logo</button>
             </div>
         </div>
 
@@ -77,7 +77,7 @@
         </div>
 
         <div class="form-actions">
-            <button type="submit" class="btn btn-primary">Save Settings</button>
+            <button type="submit" class="btn-primary">Save Settings</button>
         </div>
     </form>
 </div>
