--- a/embedded/admin/templates/admin_tags.tmpl
+++ b/embedded/admin/templates/admin_tags.tmpl
@@ -1,17 +1,21 @@
 {{ template "admin_header" . }}
-<div class="admin-page">
-    <div class="page-header">
-        <h1>Tags</h1>
-        <a href="/admin/tags/create" class="btn btn-primary">Create New Tag</a>
-    </div>
-    
-    {{if .error}}
-    <div class="error-message">{{.error}}</div>
-    {{end}}
+<div>
+    <h1 class="title">Tags</h1>
+
+    {{ if .tags }}
+        <div class="mb-8 cursor-pointer">
+            <a href="/admin/tags/create" class="btn-primary">
+                Create New Tag
+                <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+    {{ end }}
 
     <div class="table-container">
         {{if .tags}}
-        <table class="admin-table">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Tag Name</th>
@@ -27,9 +31,9 @@
                     <td>{{.Slug}}</td>
                     <td>{{.PostCount}}</td>
                     <td class="actions">
-                        <a href="/admin/tags/{{.ID}}/posts" class="btn btn-view">View Posts</a>
-                        <a href="/admin/tags/{{.ID}}/edit" class="btn btn-primary">Edit</a>
-                        <a href="/admin/tags/{{.ID}}/delete" class="btn btn-delete">Delete</a>
+                        <a href="/admin/tags/{{.ID}}/edit" class="btn-primary">Edit</a>
+                        <a href="/admin/tags/{{.ID}}/delete" class="btn-danger">Delete</a>
+                        <a href="/admin/tags/{{.ID}}/posts" class="btn-secondary">View Posts</a>
                     </td>
                 </tr>
                 {{end}}
@@ -37,8 +41,13 @@
         </table>
         {{else}}
         <div class="empty-state">
-            <p>No tags found. Create tags to organize your posts!</p>
-            <a href="/admin/tags/create" class="btn btn-primary">Create Tag</a>
+            <p>No tags found</p>
+            <a href="/admin/tags/create" class="link-primary">
+                Create your first tag!
+                <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
         </div>
         {{end}}
     </div>
