--- a/embedded/admin/templates/admin_users.tmpl
+++ b/embedded/admin/templates/admin_users.tmpl
@@ -1,35 +1,41 @@
 {{ template "admin_header" . }}
-<div class="admin-page">
-    <div class="page-header">
-        <h1>Users</h1>
-        <a href="/admin/users/create" class="btn btn-primary">Create New User</a>
-    </div>
-    <div class="table-container">
-        <table class="admin-table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Created At</th>
-                    <th>Updated At</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{range .users}}
-                <tr>
-                    <td>{{.FirstName}} {{.LastName}}</td>
-                    <td>{{.Email}}</td>
-                    <td>{{.CreatedAt.Format "2006-01-02 15:04"}}</td>
-                    <td>{{.UpdatedAt.Format "2006-01-02 15:04"}}</td>
-                    <td class="actions">
-                        <a href="/admin/users/{{.ID}}/edit" class="btn btn-edit">Edit</a>
-                        <a href="/admin/users/{{.ID}}/delete" class="btn btn-delete">Delete</a>
-                    </td>
-                </tr>
-                {{end}}
-            </tbody>
-        </table>
-    </div>
+
+<h1 class="title">Users</h1>
+ <div class="mb-8 cursor-pointer">
+    <a href="/admin/users/create" class="btn-primary">
+        Create New User
+        <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+        </svg>
+    </a>
+</div>
+
+
+<div class="table-container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Created At</th>
+                <th>Updated At</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{range .users}}
+            <tr>
+                <td>{{.FirstName}} {{.LastName}}</td>
+                <td>{{.Email}}</td>
+                <td>{{.CreatedAt.Format "2006-01-02 15:04"}}</td>
+                <td>{{.UpdatedAt.Format "2006-01-02 15:04"}}</td>
+                <td class="actions">
+                    <a href="/admin/users/{{.ID}}/edit" class="btn-primary">Edit</a>
+                    <a href="/admin/users/{{.ID}}/delete" class="btn-danger">Delete</a>
+                </td>
+            </tr>
+            {{end}}
+        </tbody>
+    </table>
 </div>
 {{ template "admin_footer" . }}
