--- a/embedded/admin/templates/includes/media_selector.tmpl
+++ b/embedded/admin/templates/includes/media_selector.tmpl
@@ -4,7 +4,9 @@
         <div class="modal-header">
             <h3>Media Library</h3>
             <button onclick="closeMediaModal()" class="close-button">
-                <i class="fas fa-times"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
             </button>
         </div>
 
