--- a/embedded/admin/templates/setup.tmpl
+++ b/embedded/admin/templates/setup.tmpl
@@ -56,7 +56,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required class="form-control">
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Create Admin Account</button>
+            <button type="submit" class="btn-primary btn-block">Create Admin Account</button>
         </form>
     </div>
 </body>
