--- a/embedded/admin/templates/admin_create_page.tmpl
+++ b/embedded/admin/templates/admin_create_page.tmpl
@@ -6,7 +6,7 @@
     <a href="/admin/pages" class="btn-secondary">← Back to Pages</a>
 </div>
 
-<div class="editor-container">
+<div class="page-container">
     <div x-inity="pages"></div>
 </div>
 
