--- a/embedded/admin/templates/admin_create_post.tmpl
+++ b/embedded/admin/templates/admin_create_post.tmpl
@@ -5,7 +5,7 @@
     <a href="/admin/posts" class="btn-secondary">← Back to Posts</a>
 </div>
 
-<div class="editor-container">
+<div class="app-container">
         <div x-inity="posts"></div>
 </div>
 {{ template "admin_footer" . }}
