--- a/embedded/admin/templates/admin_settings.tmpl
+++ b/embedded/admin/templates/admin_settings.tmpl
@@ -3,7 +3,7 @@
 
 
 <div class="app-container">
-    <div x-inity="settings">
+    <div x-inity="settings" data-logo-url="{{.logoUrl}}">
     {{ .settings.ToJSON }}
     </div>
 </div>
