--- a/embedded/admin/templates/admin_create_page.tmpl
+++ b/embedded/admin/templates/admin_create_page.tmpl
@@ -1,18 +1,13 @@
 {{ template "admin_header" . }}
 {{ template "media_selector" . }}
-<div class="admin-page">
-    <div class="page-header">
-        <h1 class="text-4xl text-bold mb-4">Create New Page</h1>
-        <a href="/admin/pages" class="btn">← Back to Pages</a>
-    </div>
 
-    {{ if .error }}
-        <div class="error-message">{{ .error }}</div>
-    {{ end }}
+<div class="mb-8">
+    <h1 class="title">Create New Page</h1>
+    <a href="/admin/pages" class="btn-secondary">← Back to Pages</a>
+</div>
 
-    <div class="editor-container">
-        <div x-inity="pages"></div>
-    </div>
+<div class="page-container">
+    <div x-inity="pages"></div>
 </div>
 
 {{ template "admin_footer" . }}
