--- a/embedded/admin/templates/setup.tmpl
+++ b/embedded/admin/templates/setup.tmpl
@@ -3,6 +3,7 @@
 <head>
     <title>Captain Setup</title>
     <link rel="stylesheet" href="/admin/static/css/admin.css">
+    <link rel="stylesheet" href="/admin/static/css/app.css">
     <style>
         body {
             display: flex;
@@ -24,17 +25,14 @@
             text-align: center;
             margin-bottom: 2rem;
         }
-        .setup-header h1 {
-            margin: 0;
-            color: #333;
-        }
+  
     </style>
 </head>
 <body>
     <div class="setup-container">
         <div class="setup-header">
-            <h1>Welcome to Captain</h1>
-            <p>Create your admin account to get started</p>
+            <h1 class="text-2xl font-bold mb-4 text-gray-900">Welcome to Captain</h1>
+            <p class="text-gray-600">Create your admin account to get started</p>
         </div>
         <form method="POST" action="/setup">
             <div class="form-group">
@@ -56,7 +54,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required class="form-control">
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Create Admin Account</button>
+            <button type="submit" class="btn-primary">Create Admin Account</button>
         </form>
     </div>
 </body>
